# dfu

./: .gitignore  CMakeLists.txt  README  debug.sh
3dparty/3.3.4097/: license.txt  readme.txt
3dparty/3.3.4097/xml/: pawndoc.css  pawndoc.xsl
control-board/inf/: control_board.inf
control-board/kicad/: -cache.lib  control-board-cache.lib  control-board.000  control-board.bak  control-board.brd  control-board.cmp  control-board.net  control-board.pro  control-board.sch
control-board/libs/: sdc.bak  side-conns.bak
control-board/software/: CMakeLists.txt  config-win32.cmake  debug.sh
control-board/software/3dparty-src/: build_ice.bat
control-board/software/3dparty-src/IceE-1.3.0/cpp/lib/: do_not_delete
control-board/software/3dparty-src/libqtlua-1.4/: CMakeLists.txt
control-board/software/3dparty-src/libusbx-1.0.12/: Makefile.in  configure
control-board/software/3dparty-src/libusbx-1.0.12/examples/: Makefile.in
control-board/software/3dparty-src/libusbx-1.0.12/msvc/: libusb_2010.sln  libusb_dll.vcxproj  libusb_static.vcxproj
control-board/software/3dparty-src/lua-5.1.5/: CMakeLists.txt
control-board/software/3dparty-src/luabitop-1.0.2/: CMakeLists.txt
control-board/software/3dparty-src/pawn/source/amx/: CMakeLists.txt
control-board/software/3dparty-src/pawn/source/compiler/: CMakeLists.txt
control-board/software/3dparty-src/qwt-6.0.1/: CMakeLists.txt
control-board/software/files/: ctrl_board.lua  joystick.ui  main.lua
control-board/software/files/i2c/: i2c.ui
control-board/software/files/joystick/: form.ui  main.lua
control-board/software/lib-ctrlboardio/: CMakeLists.txt
control-board/software/lib-ctrlboardio/src/: ctrlboard_io.cpp  lowlevel_io.cpp  lowlevel_io.h  usb_io.h
control-board/software/lib-ctrlboardio/src/unix/: usb_io.cpp
control-board/software/lib-ctrlboardio/src/windows/: usb_io.cpp
control-board/software/lib-deviceio/: CMakeLists.txt
control-board/software/lib-deviceio/src/: device_functions.h  deviceio.cpp  deviceio.h
control-board/software/lib-qtluaex/: CMakeLists.txt
control-board/software/lib-qtluaex/src/: binder.cpp  binder.h
control-board/software/lib-usbio/: CMakeLists.txt
control-board/software/lib-usbio/src/: usb_io.cpp  usb_io.h
control-board/software/lib-widgets/: CMakeLists.txt
control-board/software/lua-application/: CMakeLists.txt
control-board/software/lua-application/src/: highlighter.cpp  main.cpp
control-board/software/lua-plugins/: CMakeLists.txt
control-board/software/lua-plugins/luactrlboardio/: CMakeLists.txt
control-board/software/lua-plugins/luactrlboardio/src/: luactrlboardio.cpp  luactrlboardio.h
control-board/software/lua-plugins/luadeviceio/: CMakeLists.txt
control-board/software/lua-plugins/luadeviceio/src/: luadeviceio.cpp  luadeviceio.h
control-board/software/pawn-run/: CMakeLists.txt
control-board/software/pawn-run/src/: pawn_cfg.in.h
control-board/software/plugins/: CMakeLists.txt
control-board/software/plugins/osc/: CMakeLists.txt
control-board/software/plugins/osc/src/: osc_plugin.cpp  osc_plugin.h
control-board/software/plugins/qwt/: CMakeLists.txt
control-board/software/tests/: CMakeLists.txt
control-board/software/tests/test-usbio/: CMakeLists.txt
control-board/software/tests/test-usbio/src/: main.cpp
dfu/: config.h.in
dfu-cmd/: CMakeLists.txt
dfu-cmd/src/: main.c  main.cpp
dfu/3dparty/3.3.4097/: history.txt
dfu/libdfu/: CMakeLists.txt
dfu/orig/: stm32dfu_glade.S
firmware/: Makefile  description.txt
firmware-pawn-dev/firmware/: Makefile  conf_ctrl.c  conf_ctrl.h  debug_ext.sh  halconf.h  main.c  mcuconf.h  serial_ctrl.c  serial_ctrl.h  usb_ctrl.c
firmware-pawn-dev/firmware/.dep/: adc.o.d  adc_lld.o.d  amx.o.d  amxcore.o.d  board.o.d  can.o.d  can_lld.o.d  chcond.o.d  chcore.o.d  chcore_v7m.o.d  chdebug.o.d  chdynamic.o.d  chevents.o.d  chheap.o.d  chlists.o.d  chmboxes.o.d  chmemcore.o.d  chmempools.o.d  chmsg.o.d  chmtx.o.d  chprintf.o.d  chqueues.o.d  chregistry.o.d  chschd.o.d  chsem.o.d  chsys.o.d  chthreads.o.d  chvt.o.d  conf_ctrl.o.d  crt0.o.d  evtimer.o.d  ext.o.d  ext_lld.o.d  gpt.o.d  gpt_lld.o.d  hal.o.d  hal_lld.o.d  i2c.o.d  i2c_lld.o.d  icu.o.d  (+31 more)
firmware-pawn-dev/firmware/BOARD/: board.mk
firmware-pawn-dev/firmware/PORTLD/: STM32F103C8T6.ld
firmware-pawn-dev/software/: CMakeLists.txt
firmware-pawn-dev/software/3dparty/: CMakeLists.txt
firmware-pawn-dev/software/3dparty/qtlua-1.4/: CMakeLists.txt
firmware-pawn-dev/software/3dparty/qtlua-1.4/src/: qtluaconsole.cc
firmware-pawn-dev/software/luamcuctrl/src/: luamcuctrl.cpp
firmware-pawn-dev/software/mcuctrl/: CMakeLists.txt
firmware-pawn-dev/software/mcuctrl/src/: mcu_ctrl.cpp  mcu_ctrl.h
firmware-pawn-dev/software/terminal/: CMakeLists.txt
firmware-pawn-dev/software/terminal/src/: main.cpp  msleep.cpp  msleep.h  terminal.cpp  terminal.h  terminal.ui
firmware-pawn-dev/software/terminal/src_lua/: default.lua
firmware-pawn-dev/software/tests/: CMakeLists.txt
firmware-pawn-dev/software/tests/mcuctrl_test/src/: main.cpp
firmware-pawn-dev/software/tests/pawn_test/pawn_src/: io.inc  main.p
firmware/dfu/: Makefile  flash.sh
firmware/example/: .project  Makefile  Makefile_old  OpenOCD reset debug.launch  cs-make_program.cmd  ff_test_term.h  misc_test_term.c  misc_test_term.h  openocd_test.cmd  proj_objdump.cmd  readme.txt  stm32_chanfat.uvopt
firmware/mass_storage/: Makefile
firmware/motor/: Control stage parameters.h  PMSM motor parameters.h  Power stage parameters.h
firmware/regilar_firmware/: flash.sh
firmware/regular_firmware/: Makefile  Makefile.unix
firmware/src/: dfu_mal.h  flash_if.c  hw_config.h  main.c  usb_desc.c  usb_prop.h  usb_pwr.h
firmware/test/: Makefile
firmware/tmp/: main.c  task_plot.c
libdfu/: CMakeLists.txt
libdfu/src/: dfu.c  dfu.h  hexfile.c  hexfile.h  stm32mem.c  stm32mem.h
orig/: main.c  stm32dfu.glade
pawn/: CMakeLists.txt
pawn/fatfs/: diskio.c  diskio.h  ffconf.h  ffdev.dsp  ffdev.ncb  ffdev.opt  ffdev.plg  main.c
pawn/src/: main.c  pawn_cfg.in.h  pawn_loader.c  pawn_loader.h
(+123 files in other folders)
