
cmake_minimum_required( VERSION 2.6 )
project( "embedding_pawn" )
set( ROOT ${CMAKE_CURRENT_SOURCE_DIR} )
set( CMAKE_INSTALL_PREFIX ${ROOT}/build.app )
if ( WIN32 )
    include( "./config-win.cmake" )
endif ( WIN32 )
add_subdirectory( "./3dparty" )
if ( UNIX )
    add_subdirectory( "./mcuctrl" )
    add_subdirectory( "./luamcuctrl" )
endif ( UNIX )
add_subdirectory( "./tests" )
add_subdirectory( "./terminal" )
